# YouTube-Spam-Collection

./: README.md  config.py  data-exploration.ipynb  data_ingestion.py  extra_trees_model.py  logger.py  logistic_regression_model.py  main.py  nlp-investigation.ipynb  nlp-modeling.ipynb  preprocessing.py  pyproject.toml  requirements.txt  spacy_word2vec.py  utils.py
config/: default_settings.yml
dataset/: youtube-agg-clean-v1.parquet  youtube-agg-nlp-v1.parquet
helpers/: pandas_h.py
