[tool.poetry]
name = "youtube-spam-collection"
version = "0.1.0"
description = ""
authors = ["Kayhan <me@kayhan.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
spacy = "^3.3.1"
emot = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
pyarrow = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
